actions-menu.js - toggle hide DB ID is conditionally visible display-single-output.js - db ID Tile is no longer visible when there is no such data

--- a/components/file-chosen/file-chosen.module.scss
+++ b/components/file-chosen/file-chosen.module.scss
@@ -113,3 +113,7 @@
     min-height: 100%;
   }
 }
+
+.hiddenContainerHide {
+  display: none !important;
+}
